Testing Complete Colors Added to Config.

--- a/src/config.yml
+++ b/src/config.yml
@@ -109,127 +109,127 @@ Jail:
   - '/register'
 Messages:
   Ban:
-    MsgToVictim: 'You have been banned by %admin%. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was banned by %admin%. Reason: %reason%!'
-    Failed: '%victim% is already in banned.'
-    Denied: 'Your ban attempt has been denied!'
-    Emo: 'You cannot ban yourself!'   
-    Login: '%admin% banned you from this server! Reason: %reason%!'
+    MsgToVictim: '&6You have been banned by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was banned by &7%admin%&6. Reason: &7%reason%&6!'
+    Failed: '&4%victim%&c is already in banned.'
+    Denied: '&cYour ban attempt has been denied!'
+    Emo: '&cYou cannot ban yourself!'
+    Login: '&7%admin%&6 banned you from this server! Reason: &7%reason%&6!'
   CheckBan:
-    Header: 'Found %amt% records for %victim%.'
-    None: 'No records found for %victim%.'
+    Header: '&6Found &7%amt%&6 records for &7%victim%&6.'
+    None: '&cNo records found for &4%victim%&c.'
   Clean:
-    Complete: 'Deleted %amt% player.dat files.'
+    Complete: '&6Deleted &7%amt%&6 player.dat files.'
   DupeIP:
-    Failed: 'Unable to view ip for %victim% !'
-    Header: 'Scanning Current IP of %victim%: %ip% !'
-    Completed: 'Scanning Complete!'
+    Failed: '&cUnable to view ip for &4%victim% &c!'
+    Header: '&6Scanning Current IP of &7%victim%&6: &7%ip% !'
+    Completed: '&aScanning Complete!'
   Empty:
-    MsgToVictim: '%admin% has cleared your inventory!'
-    MsgToSender: '%admin% has cleared the inventory of %victim%!'
-    Online: '%victim% must be online.'
+    MsgToVictim: '&7%admin%&6 has cleared your inventory!'
+    MsgToSender: '&7%admin%&6 has cleared the inventory of &7%victim%&6!'
+    Online: '&4%victim%&c must be online.'
   Export:
-    Failed: 'Could not export ban lists.'
-    Completed: 'Exported banlists.'
+    Failed: '&cCould not export ban lists.'
+    Completed: '&aExported banlists.'
   History:
-    Header: 'Ultrabans Listing %amt% Records.'
-    Failed: 'Unable to find any bans.'
+    Header: '&6Ultrabans Listing &7%amt%&6 Records.'
+    Failed: '&cUnable to find any bans.'
   Import:
-    Loading: 'Be patient. Loading...'
-    Failed: 'Could not import ban list.'
-    Completed: 'System imported the banlist to the database.'
+    Loading: '&cBe patient. Loading...'
+    Failed: '&cCould not import ban list.'
+    Completed: '&aSystem imported the banlist to the database.'
   InvOf:
-    Failed: 'Unable to find player.'
-    Console: 'This command must be executed by a player.'
+    Failed: '&cUnable to find player.'
+    Console: '&cThis command must be executed by a &4player&c.'
   IPBan:
-    MsgToVictim: 'You have been ipbanned by %admin%. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was ipbanned by %admin%. Reason: %reason%!'
-    IPNotFound: 'IP address not found. Processed as a normal ban for %victim%!' 
-    Failed: '%victim% is already in banned.'
-    Denied: 'Your ipban attempt has been denied!'
-    Emo: 'You cannot ipban yourself!'
-    Login: 'Your IP is banned!'   
+    MsgToVictim: '&6You have been ipbanned by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was ipbanned by &7%admin%&6. Reason: &7%reason%&6!'
+    IPNotFound: '&cIP address not found. &6Processed as a normal ban for &7%victim%&6!'
+    Failed: '&4%victim%&c is already in banned.'
+    Denied: '&cYour ipban attempt has been denied!'
+    Emo: '&cYou cannot ipban yourself!'
+    Login: '&7Your IP is banned!'
   Jail:
-    MsgToVictim: 'You have been jailed by %admin%. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was jailed by %admin%. Reason: %reason%!'
-    SetJail: 'Jail has been set!'
-    SetRelease: 'Release has been set!'
-    Failed: '%victim% is already in jail.'
-    Online: '%victim% must be online to be jailed.'
-    Denied: 'Your jail attempt has been denied!'
-    Emo: 'You cannot jail yourself!'
-    PlaceMsg: 'You cannot place blocks while you are jailed!'
-    BreakMsg: 'You cannot break blocks while you are jailed!'
+    MsgToVictim: '&6You have been jailed by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was jailed by &7%admin%&6. Reason: &7%reason%&6!'
+    SetJail: '&aJail has been set!'
+    SetRelease: '&aRelease has been set!'
+    Failed: '&4%victim%&c is already in jail.'
+    Online: '&4%victim%&c must be online to be jailed.'
+    Denied: '&cYour jail attempt has been denied!'
+    Emo: '&cYou cannot jail yourself!'
+    PlaceMsg: '&cYou cannot place blocks while you are jailed!'
+    BreakMsg: '&cYou cannot break blocks while you are jailed!'
   Kick:
-    MsgToAll: 'Everyone has been kicked by %admin%. Reason: %reason%'
-    MsgToVictim: 'You have been kicked by %admin%. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was kicked by %admin%. Reason: %reason%!'
-    Online: '%victim% must be online.'
-    Denied: 'Your kick has been denied!'
-    Emo: 'You cannot kick yourself!'  
+    MsgToAll: '&6Everyone has been kicked by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToVictim: '&6You have been kicked by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was kicked by &7%admin%&6. Reason: &7%reason%&6!'
+    Online: '&4%victim%&c must be online.'
+    Denied: '&cYour kick has been denied!'
+    Emo: '&cYou cannot kick yourself!'
   Lockdown:
-    Start: 'Lockdown initiated. PlayerLogin disabled.'
-    End: 'Lockdown ended. PlayerLogin reenabled.'
-    Status: 'Lockdown is disabled.'
-    LoginMsg: 'Server is under a lockdown, Try again later! Sorry.'
+    Start: '&cLockdown initiated. &4Player Login&c disabled.'
+    End: '&aLockdown ended. &2Player Login&a reenabled.'
+    Status: '&cLockdown is disabled.'
+    LoginMsg: '&4Server is under a lockdown, Try again later!&c Sorry.'
   Mute:
-    MuteMsgToSender: 'You have muted %victim%.'
-    MuteMsgToVictim: 'You have been muted!'
-    UnmuteMsgToSender: 'You have unmuted %victim%.'
-    UnmuteMsgToVictim: 'You have been unmuted.'
-    Denied: 'Your mute has been denied!'
-    Emo: 'You cannot mute yourself!'
-    Chat: 'Your cry falls on deaf ears.'   
+    MuteMsgToSender: '&6You have muted &7%victim%&6.'
+    MuteMsgToVictim: '&4You have been muted!'
+    UnmuteMsgToSender: '&6You have unmuted &7%victim%&6.'
+    UnmuteMsgToVictim: '&aYou have been unmuted.'
+    Denied: '&cYour mute has been denied!'
+    Emo: '&cYou cannot mute yourself!'
+    Chat: '&cYour cry falls on deaf ears.'
   Pardon:
-    Msg: '%victim% was released from jail by %admin%!'
+    Msg: '&7%victim%&6 was released from jail by &7%admin%&6!'
   PermaBan:
-    MsgToVictim: 'You have been permabanned by %admin%. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was permabanned by %admin%. Reason: %reason%!'
-    Failed: '%victim% is already banned.'
-    Online: '%victim% must be online.'
-    Denied: 'Your permaban has been denied!'
-    Emo: 'You cannot permaban yourself!'    
+    MsgToVictim: '&6You have been permabanned by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was permabanned by &7%admin%&6. Reason: &7%reason%&6!'
+    Failed: '&4%victim%&c is already banned.'
+    Online: '&4%victim%&c must be online.'
+    Denied: '&cYour permaban has been denied!'
+    Emo: '&cYou cannot permaban yourself!'
   Spawn:
-    MsgToVictim: 'You have been sent to spawn!'
-    MsgToSender: '%victim% is now at spawn!'
-    Failed: '%victim% is not online.'
+    MsgToVictim: '&cYou have been sent to spawn!'
+    MsgToSender: '&7%victim%&6 is now at spawn!'
+    Failed: '&4%victim%&c is not online.'
   Starve:
-    MsgToVictim: 'You are now starving!'
-    MsgToSender: '%victim% is now starving!'
-    Failed: '%victim% is not online.'
-    Denied: 'Your starve attempt has been denied!'
-    Emo: 'You cannot starve yourself!'
+    MsgToVictim: '&cYou are now starving!'
+    MsgToSender: '&6%victim%&7 is now starving!'
+    Failed: '&4%victim%&c is not online.'
+    Denied: '&cYour starve attempt has been denied!'
+    Emo: '&cYou cannot starve yourself!'
   TempBan:
-    MsgToVictim: 'You have been tempbanned by %admin% for %amt% %mode%s. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was tempbanned by %admin% for %amt% %mode%s. Reason: %reason%!'
-    Failed: '%victim% is already tempbanned!'
-    Denied: 'Your tempban has been denied!'
-    Emo: 'You cannot tempban yourself!'
-    Login: 'You have been tempbanned by %admin% for %time%. Reason: %reason%!'
+    MsgToVictim: '&6You have been tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+    Failed: '&4%victim%&c is already tempbanned!'
+    Denied: '&cYour tempban has been denied!'
+    Emo: '&cYou cannot tempban yourself!'
+    Login: '&6You have been tempbanned by &7%admin%&6 for &7%time%&6. Reason: &7%reason%&6!'
   TempIpBan:
-    MsgToVictim: 'You have been tempipbanned by %admin% for %amt% %mode%s. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was tempipbanned by %admin% for %amt% %mode%s. Reason: %reason%!'
-    Failed: '%victim% is already tempipbanned!'
-    Denied: 'Your tempipban has been denied!'
-    Emo: 'You cannot tempipban yourself!'
-    IPNotFound: 'IP address not found. Processed as a normal tempban for %victim%!'  
+    MsgToVictim: '&6You have been tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+    Failed: '&4%victim%&c is already tempipbanned!'
+    Denied: '&cYour tempipban has been denied!'
+    Emo: '&cYou cannot tempipban yourself!'
+    IPNotFound: '&cIP address not found.&6 Processed as a normal tempban for &7%victim%&6!'
   TempJail:
-    MsgToVictim: 'You have been tempjailed by %admin% for %amt% %mode%s. Reason: %reason%!'
-    MsgToBroadcast: '%victim% was tempjailed by %admin% for %amt% %mode%s. Reason: %reason%!'
-    Failed: '%victim% is already jailed!'
-    Denied: 'Your tempjail has been denied!'
-    Emo: 'You cannot tempjail yourself!'
+    MsgToVictim: '&6You have been tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+    Failed: '&4%victim%&c is already jailed!'
+    Denied: '&cYour tempjail has been denied!'
+    Emo: '&cYou cannot tempjail yourself!'
   Unban:
-    MsgToBroadcast: '%victim% was unbanned by %admin%!'
-    PermaBanned: 'Unable to unban, %victim% was Permabanned.'
-    Failed: '%victim% is already unbanned!'
+    MsgToBroadcast: '&7%victim%&6 was unbanned by &7%admin%&6!'
+    PermaBanned: '&cUnable to unban, &7%victim%&c was Permabanned.'
+    Failed: '&4%victim%&c is already unbanned!'
   Warn:
-    MsgToVictim: 'You have been warned by %admin%. Reason: %reason%'
-    MsgToBroadcast: '%victim% was warned by %admin%. Reason: %reason%'
-    Denied: 'Your warning has been denied!'
-    Emo: 'You cannot warn yourself!'
+    MsgToVictim: '&6You have been warned by &7%admin%&6. Reason: &7%reason%&6!'
+    MsgToBroadcast: '&7%victim%&6 was warned by &7%admin%&6. Reason: &7%reason%&6!'
+    Denied: '&cYour warning has been denied!'
+    Emo: '&cYou cannot warn yourself!'
   MaxWarn:
-    MsgToBroadcast: '%cmd% performed by Ultrabans on %victim%. Reason: Reached Max Warnings'
+    MsgToBroadcast: '&7%cmd%&6 performed by Ultrabans on &7%victim%&6. Reason: &7Reached Max Warnings&6!'
   Permission: 'You do not have the required permissions.'
 #Do Not Change Values Below#
 jail:
