--- a/src/config.yml
+++ b/src/config.yml
@@ -15,6 +15,10 @@ SQLite:
 CleanOnBan: true
 #clear warnings on ban#
 ClearWarnOnBan: false
+#store unbans#
+UnbansLog:
+  Enable: true
+  LogReason: true
 #Max Warnings#
 MaxWarning:
   Enable: false
