--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.3.2-R2.0.jar"/>
+	<classpathentry kind="lib" path="lib/bukkit_breaks_everything.jar"/>
+	<classpathentry kind="lib" path="lib/craftbukkit_breaks_everything.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
