--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     <property name="source" value="1.6"/>
     <path id="Ultrabans.classpath">
         <pathelement location="bin"/>
-        <pathelement location="lib/*.jar"/>
+        <pathelement location="lib/craftbukkit-1.4.5-R1.0.jar"/>
     </path>
 
 	<target name="init" description="Initialize directories, etc.">
