--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
     <path id="Ultrabans.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/craftbukkit-1.4.5-R1.0.jar"/>
+        <pathelement location="lib/craftbukkit-1.4.5-R0.1.jar"/>
     </path>
 
 	<target name="init" description="Initialize directories, etc.">
