--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/craftbukkit-1.4.5-R1.0.jar"/>
 	<classpathentry kind="lib" path="lib/craftbukkit-1.4.5-R0.1.jar"/>
+	<classpathentry kind="lib" path="lib/craftbukkit-1.4.6-R0.1-Dev.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
