--- a/config.yml
+++ b/config.yml
@@ -15,10 +15,8 @@ SQLite:
 CleanOnBan: true
 #clear warnings on ban#
 ClearWarnOnBan: false
-#store unbans#
-UnbansLog:
-  Enable: true
-  LogReason: true
+Log:
+  Enabled: true
 #Max Warnings#
 MaxWarning:
   Enable: false
@@ -43,10 +41,6 @@ Login:
 #Check for duplicates on Login#
   DupeCheck:
     Enable: true
-#Check ping on Login#
-  PingCheck:
-    Enable: true
-    MaxPing: 500
 #PingBack joining players, and kick if unreachable. //Experimental#
   ProxyPingBack:
     Enable: false
@@ -235,14 +229,6 @@ Messages:
   MaxWarn:
     MsgToBroadcast: '&7%cmd%&6 performed by Ultrabans on &7%victim%&6. Reason: &7Reached Max Warnings&6!'
   Permission: 'You do not have the required permissions.'
-Mode:
-  Second: Second(s)
-  Minute: Minute(s)
-  Hour: Hour(s)
-  Day: Day(s)
-  Weeks: Week(s)
-  Month: Month(s)
-  Year: Year(s)
 #Do Not Change Values Below#
 jail:
   x: 0
