--- a/config.yml
+++ b/config.yml
@@ -238,9 +238,5 @@ Mode:
   Month: Month
   Year: Year
 #Do Not Change Values Below#
-jail:
-  x: 0
-  y: 0
-  z: 0
-  yaw: 0
-  pitch: 0
+Config:
+  Version: 3.0
