--- a/en-us.yml
+++ b/en-us.yml
@@ -122,10 +122,38 @@ Status:
   CacheIPBans: '&6All IPs Banned: &7%amt%'
   CacheJail: '&6Jailed Players: &7%amt%'
 Tempban:
-  Arguments: ''
+  Arguments: '&f/tempban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} \n&4Not Enough Arguments'
   MsgToVictim: '&6You have been tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
   MsgToBroadcast: '&7%victim%&6 was tempbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
   Failed: '&4%victim%&c is already tempbanned!'
   Denied: '&cYour tempban has been denied!'
   Emo: '&cYou cannot tempban yourself!'
   Login: '&6You have been tempbanned by &7%admin%&6 for &7%time%&6. Reason: &7%reason%&6!'
+TempIpBan:
+  Arguments: '&f/tempipban {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} \n&4Not Enough Arguments'
+  MsgToVictim: '&6You have been tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was tempipbanned by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  Failed: '&4%victim%&c is already tempipbanned!'
+  Denied: '&cYour tempipban has been denied!'
+  Emo: '&cYou cannot tempipban yourself!'
+  IPNotFound: '&cIP address not found.&6 Processed as a normal tempban for &7%victim%&6!'
+TempJail:
+  Arguments: '&f/tempjail {player} (-s/-a) {amt} {sec/min/hour/day} {Reason} \n&4Not Enough Arguments'
+  MsgToVictim: '&6You have been tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was tempjailed by &7%admin%&6 for &7%amt% %mode%s.&6 Reason: &7%reason%&6!'
+  Failed: '&4%victim%&c is already jailed!'
+  Denied: '&cYour tempjail has been denied!'
+  Emo: '&cYou cannot tempjail yourself!'
+Unban:
+  Arguments: '&f/unban {player} &4Not Enough Arguments'
+  MsgToBroadcast: '&7%victim%&6 was unbanned by &7%admin%&6!'
+  PermaBanned: '&cUnable to unban, &7%victim%&c was Permabanned.'
+  Failed: '&4%victim%&c is already unbanned!'
+Warn:
+  Arguments: '&f/warn {player} (-s/-a) (reason) &4Not Enough Arguments'
+  MsgToVictim: '&6You have been warned by &7%admin%&6. Reason: &7%reason%&6!'
+  MsgToBroadcast: '&7%victim%&6 was warned by &7%admin%&6. Reason: &7%reason%&6!'
+  Denied: '&cYour warning has been denied!'
+  Emo: '&cYou cannot warn yourself!'
+MaxWarn:
+  MsgToBroadcast: '&7%cmd%&6 performed by Ultrabans on &7%victim%&6. Reason: &7Reached Max Warnings&6!'
